<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/number_range_view"
        android:text="@string/number_range_view"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/first_rangeET"
            android:layout_weight="1"
            android:hint="@string/first_range"
            android:inputType="number"
            android:gravity="center"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/second_rangeET"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/second_range"
            android:padding="15dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/ok_btn"
        android:layout_marginTop="40dp"
        android:text="@string/okBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/prime_View"
        android:hint="@string/prime_number_view"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:padding="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>

</ScrollView>